--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ members = [
     "day06_1",
     "day06_2",
     "day06_lib",
-    "day07_1", "day07_2",
+    "day07_1",
+    "day07_2",
     "day07_lib",
+    "day08_1",
+    "day08_lib",
 ]
